--- a/components/popover/popover-demo.html
+++ b/components/popover/popover-demo.html
@@ -1,8 +1,9 @@
 
 <div class="min-h-28">
   <button type="button" class="inline-flex items-center justify-center border align-middle select-none font-sans font-medium text-center duration-300 ease-in disabled:opacity-50 disabled:shadow-none disabled:cursor-not-allowed focus:shadow-none text-sm py-2 px-4 shadow-sm hover:shadow-md bg-stone-800 hover:bg-stone-700 relative bg-gradient-to-b from-stone-700 to-stone-800 border-stone-900 text-stone-50 rounded-lg hover:bg-gradient-to-b hover:from-stone-800 hover:to-stone-800 hover:border-stone-900 after:absolute after:inset-0 after:rounded-[inherit] after:box-shadow after:shadow-[inset_0_1px_0px_rgba(255,255,255,0.25),inset_0_-2px_0px_rgba(0,0,0,0.35)] after:pointer-events-none transition antialiased" 
-    data-dui-toggle="popover" data-dui-placement="bottom" data-dui-content="This is a very beautiful popover, show some love." 
+    data-dui-toggle="popover" data-dui-placement="bottom"
     data-dui-popover-class="bg-white text-stone-800 border border-stone-200 rounded-md shadow-sm p-2 text-sm z-50">
     Open
   </button>
+  <div data-dui-popover-content class="hidden">This is a very beautiful popover, show some love.</div>
 </div>
